--- a/class/hw1/theory.ipynb
+++ b/class/hw1/theory.ipynb
@@ -139,7 +139,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "In short, we do it to avoid the discontinuity when the slope goes straight up. As the angle goes from 89 to 91 degrees, the slope goes through positive infinity and then back through negative infinity. This will cause difficulties since in addition to being discontinuous it leads to an unbounded set of values for the slope.\n",
+    "\n",
+    "TODO: EQUATION"
    ]
   },
   {
@@ -282,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
