Finally passed, same as before but with flipped sobel...

--- a/class/hw1/p2.ipynb
+++ b/class/hw1/p2.ipynb
@@ -137,8 +137,8 @@
     "    \n",
     "    #--------------------------------------\n",
     "    # define sobel_filter_x and sobel_filter_y, you can ignore the 1/8 normalization weight!\n",
-    "    sobel_filter_x = np.array([[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]])\n",
-    "    sobel_filter_y = np.array([[-1, -2, -1], [0, 0, 0], [1, 2, 1]])\n",
+    "    sobel_filter_x = np.array([[1, 0, -1], [2, 0, -2], [1, 0, -1]])\n",
+    "    sobel_filter_y = np.array([[1, 2, 1], [0, 0, 0], [-1, -2, -1]])\n",
     "    \n",
     "    image_x = filter_image_vec(image, sobel_filter_x)\n",
     "    image_y = filter_image_vec(image, sobel_filter_y)\n",
@@ -146,7 +146,7 @@
     "    # Magnitude is the euclidean norm\n",
     "    image_m = np.linalg.norm(np.dstack((image_x, image_y)), axis=2)\n",
     "    # Calculate angle, cast to degrees, convert to 0-360\n",
-    "    image_o = np.rad2deg(np.arctan2(image_y, image_x) % (2*np.pi))\n",
+    "    image_o = np.rad2deg(np.arctan2(image_y, image_x)) % 360\n",
     "    \n",
     "    return image_m, image_o, image_x, image_y\n",
     "\n",
@@ -403,8 +403,8 @@
     "    \n",
     "    #--------------------------------------\n",
     "    # define sobel_filter_x and sobel_filter_y, you can ignore the 1/8 normalization weight!\n",
-    "    sobel_filter_x = np.array([[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]])\n",
-    "    sobel_filter_y = np.array([[-1, -2, -1], [0, 0, 0], [1, 2, 1]])\n",
+    "    sobel_filter_x = np.array([[1, 0, -1], [2, 0, -2], [1, 0, -1]])\n",
+    "    sobel_filter_y = np.array([[1, 2, 1], [0, 0, 0], [-1, -2, -1]])\n",
     "    \n",
     "    image_x = filter_image_vec(image, sobel_filter_x)\n",
     "    image_y = filter_image_vec(image, sobel_filter_y)\n",
