Big batch of changes for hw2

--- a/class/hw2/p4.ipynb
+++ b/class/hw2/p4.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c30de23a",
    "metadata": {
     "deletable": false,
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "afee3b08",
    "metadata": {
     "deletable": false,
@@ -302,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "def multichannel_conv2d(x,weight,bias):\n",
+    "def multichannel_conv2d(x, weight, bias):\n",
     "    '''\n",
     "    Performs multi-channel 2D convolution.\n",
     "\n",
@@ -317,15 +317,39 @@
     "    h, w, input_dims = x.shape\n",
     "    output_dims = weight.shape[0]\n",
     "    final_res = np.zeros((h, w, output_dims))\n",
+    "\n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> for 2D convolution we need to use np.fliplr and np.flipud\n",
     "    2.> can use scipy.ndimage.convolve with the flipped kernel\n",
     "    3.> don't forget to add the bias\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return final_res"
+    "\n",
+    "    # Apply the filters and collate all the  results\n",
+    "    for j in range(output_dims):\n",
+    "        final_res[:, :, j] = np.sum([\n",
+    "            scipy.ndimage.convolve(input=x[:, :, k],\n",
+    "                                   weights=np.fliplr(np.flipud(weight[j, k])),\n",
+    "                                   mode=\"constant\")\n",
+    "            for k in range(input_dims)\n",
+    "        ], axis=0) + bias[j]\n",
+    "    return final_res\n",
+    "\n",
+    "# H = 10\n",
+    "# W = 20\n",
+    "# input_dim = 6\n",
+    "# output_dim = 9\n",
+    "# kernel_size = 3\n",
+    "\n",
+    "# x = np.array(range(H*W*input_dim)).reshape(H, W, input_dim)\n",
+    "# weight = np.array(range(output_dim*input_dim*kernel_size*kernel_size)).reshape(\n",
+    "#     output_dim, input_dim, kernel_size, kernel_size\n",
+    "# )\n",
+    "# bias = np.array(range(output_dim))\n",
+    "\n",
+    "# final = multichannel_conv2d(x, weight, bias)\n",
+    "# import ipdb; ipdb.set_trace()\n",
+    "# pass"
    ]
   },
   {
@@ -359,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "547e2ce4",
    "metadata": {
     "deletable": false,
@@ -386,9 +410,14 @@
     "    [output]\n",
     "    * y: numpy.ndarray\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return y\n"
+    "    y = x.copy()\n",
+    "    y[x < 0] = 0\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "# x = np.array([[-10, -3, -1, 0, 2, 5, 10],\n",
+    "#               [5, 3, 2, 0, -4, -7, -10]])\n",
+    "# print(relu(x))"
    ]
   },
   {
@@ -420,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "77126b1a",
    "metadata": {
     "deletable": false,
@@ -437,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "def max_pool2d(x,size):\n",
+    "def max_pool2d(x, size):\n",
     "    '''\n",
     "    2D max pooling operation.\n",
     "\n",
@@ -449,15 +478,40 @@
     "    * y: numpy.ndarray of shape (H/size,W/size,input_dim)\n",
     "    '''\n",
     "    h, w, dims = x.shape\n",
+    "    pooled_arr = np.zeros((h // size, w // size, dims))\n",
+    "\n",
+    "    # Choose the slice values\n",
+    "    height_slices = [[i * size, (i + 1) * size] for i in range(int(h / size))]\n",
+    "    width_slices = [[i * size, (i + 1) * size] for i in range(int(w / size))]\n",
+    "    # Special case the last values to make sure we don't miss anything\n",
+    "    height_slices[-1][1] = h\n",
+    "    width_slices[-1][1] = w\n",
+    "    \n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> estimate the shape you need to apply the pooling operation.\n",
     "    2.> We can smart fill the padding with np.nan and then use np.nanmax to select the max (avoiding nan)\n",
     "    3.> We can input the grid (start_x:end_x, start_y:end_y, dim) as smart array indexing to np.nanmax\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return pooled_arr"
+    "    for i, (h1, h2) in enumerate(height_slices):\n",
+    "        for j, (w1, w2) in enumerate(width_slices):\n",
+    "            # Reshape so the channel/dims axis is 1 and (h,w) has collapsed\n",
+    "            chunk = x[h1:h2, w1:w2]\n",
+    "            semiflat = chunk.reshape(chunk.shape[0]*chunk.shape[1], chunk.shape[2])\n",
+    "            pooled_arr[i, j] = np.max(semiflat, axis=0)\n",
+    "\n",
+    "    return pooled_arr\n",
+    "\n",
+    "\n",
+    "# x = np.array(range(5*4*3)).reshape(5, 4, 3)\n",
+    "# size = 2\n",
+    "# print(\"x\", x)\n",
+    "# print(\"maxed\", max_pool2d(x, size))\n",
+    "\n",
+    "# x = np.array(range(3*4)).reshape(3, 4, 1)\n",
+    "# size = 2\n",
+    "# print(\"x\", x.reshape(3, 4))\n",
+    "# print(\"maxed\", max_pool2d(x, size))"
    ]
   },
   {
@@ -493,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b10c3744",
    "metadata": {
     "deletable": false,
@@ -510,7 +564,7 @@
    },
    "outputs": [],
    "source": [
-    "def linear(x,W,b):\n",
+    "def linear(x, W, b):\n",
     "    '''\n",
     "    Fully-connected layer.\n",
     "\n",
@@ -522,10 +576,15 @@
     "    [output]\n",
     "    * y: numpy.ndarray of shape (output_dim)\n",
     "    '''\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return y"
+    "    return W @ x + b\n",
+    "\n",
+    "\n",
+    "# input_dim = 7\n",
+    "# output_dim = 4\n",
+    "# x = np.array(range(input_dim))\n",
+    "# weight = np.array(range(output_dim*input_dim)).reshape(output_dim, input_dim)\n",
+    "# bias = np.array(range(output_dim))\n",
+    "# print(linear(x, weight, bias))"
    ]
   },
   {
@@ -576,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f96a0ffa",
    "metadata": {
     "deletable": false,
@@ -609,7 +668,7 @@
     "    if(len(image.shape) == 2):\n",
     "        image = np.stack((image, image, image), axis=-1)\n",
     "\n",
-    "    if(image.shape == 3 and image.shape[2] == 1):\n",
+    "    if(len(image.shape) == 3 and image.shape[2] == 1):\n",
     "        image = np.concatenate((image, image, image), axis=-1)\n",
     "\n",
     "    if(image.shape[2] == 4):\n",
@@ -621,8 +680,37 @@
     "    3.> convert the image from numpy to torch\n",
     "    '''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return image_processed"
+    "    resized = skimage.transform.resize(image, output_shape=(224, 224, 3))\n",
+    "    # from matplotlib import pyplot\n",
+    "    # pyplot.imshow(image)\n",
+    "    # pyplot.show()\n",
+    "    # pyplot.imshow(resized)\n",
+    "    # pyplot.show()\n",
+    "\n",
+    "    # In statistics, Standardization is the subtraction of the mean and then dividing\n",
+    "    # by its standard deviation. In Algebra, Normalization is the process of dividing\n",
+    "    # of a vector by its length and it transforms your data into a range between 0 and 1.\n",
+    "    mean = np.array([0.485, 0.456, 0.406])\n",
+    "    std = np.array([0.229, 0.224, 0.225])\n",
+    "    resized -= mean\n",
+    "    resized /= std\n",
+    "\n",
+    "    # Why do they want the dims reshaped? Are we sure they do? It's only mentioned\n",
+    "    # in the docstring and not explained\n",
+    "    reshaped = np.array([resized[:, :, i] for i in range(resized.shape[2])], dtype=np.double)\n",
+    "\n",
+    "    return torch.from_numpy(reshaped)\n",
+    "\n",
+    "\n",
+    "# for path_img in [\n",
+    "#         \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\",\n",
+    "#         \"./data/waterfall/sun_bwzkjyclonamrgog.jpg\",\n",
+    "#         \"./data/windmill/sun_bnsthmtlderxjywh.jpg\",\n",
+    "#         \"./data/kitchen/sun_aaslbwtcdcwjukuo.jpg\",\n",
+    "#         \"./data/laundromat/sun_ahdhftyojzpaadhb.jpg\",\n",
+    "#     ]:\n",
+    "#     image = io.imread(path_img).astype('float') / 255\n",
+    "#     preprocess_image(image)"
    ]
   },
   {
@@ -648,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9cc3e81d",
    "metadata": {
     "deletable": false,
@@ -668,6 +756,7 @@
     "def extract_deep_feature(x, vgg16_weights):\n",
     "    '''\n",
     "    Extracts deep features from the given VGG-16 weights.\n",
+    "    This is a useless explanation. What is this function supposed to do?\n",
     "\n",
     "    [input]\n",
     "    * x: numpy.ndarray of shape (H,W,3)\n",
@@ -676,16 +765,54 @@
     "    [output]\n",
     "    * feat: numpy.ndarray of shape (K)\n",
     "    '''\n",
-    "    \n",
     "    feat = np.copy(x)\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return feat"
+    "    # We are dropping the last two layers because... something fc7\n",
+    "    for layer in vgg16_weights[:-2]:\n",
+    "        # print(layer[0])\n",
+    "        if layer[0] == \"conv2d\":\n",
+    "            feat = multichannel_conv2d(x=feat, weight=layer[1], bias=layer[2])\n",
+    "        elif layer[0] == \"relu\":\n",
+    "            feat = relu(x=feat)\n",
+    "        elif layer[0] == \"maxpool2d\":\n",
+    "            feat = max_pool2d(x=feat, size=layer[1])\n",
+    "        elif layer[0] == \"linear\":\n",
+    "            feat = feat.flatten()\n",
+    "            feat = linear(x=feat, W=layer[1], b=layer[2])\n",
+    "        else:\n",
+    "            raise ValueError(\"Missed a case\")\n",
+    "\n",
+    "    return feat\n",
+    "\n",
+    "\n",
+    "# vgg16 = torchvision.models.vgg16(pretrained=True)\n",
+    "# vgg16_weights = util.get_VGG16_weights()\n",
+    "# for path_img in [\n",
+    "#         \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\",\n",
+    "#         \"./data/waterfall/sun_bwzkjyclonamrgog.jpg\",\n",
+    "#         \"./data/windmill/sun_bnsthmtlderxjywh.jpg\",\n",
+    "#         \"./data/kitchen/sun_aaslbwtcdcwjukuo.jpg\",\n",
+    "#         \"./data/laundromat/sun_ahdhftyojzpaadhb.jpg\",\n",
+    "#     ]:\n",
+    "#     image = io.imread(path_img).astype('float') / 255\n",
+    "#     img_torch = preprocess_image(image)\n",
+    "#     extract_deep_feature(np.transpose(img_torch.numpy(), (1,2,0)), vgg16_weights)\n",
+    "\n",
+    "#     with torch.no_grad():\n",
+    "#         import ipdb; ipdb.set_trace()\n",
+    "#         vgg_classifier = torch.nn.Sequential(*list(vgg16.classifier.children())[:-3])\n",
+    "#         vgg_feat_feat = vgg16.features(img_torch[None, ].double())\n",
+    "#         vgg_feat_feat = vgg_classifier(vgg_feat_feat.flatten())\n",
+    "#         pass\n",
+    "\n",
+    "# vgg16 = torchvision.models.vgg16(pretrained=True).double()\n",
+    "# image = io.imread(\"./data/aquarium/sun_aztvjgubyrgvirup.jpg\").astype('double') / 255\n",
+    "# evaluate_deep_extractor(image, vgg16)\n",
+    "# This gets 5402.599630021749, is that good? It matches several other students"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "23803b61",
    "metadata": {
     "deletable": false,
@@ -776,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "29eef544",
    "metadata": {
     "deletable": false,
@@ -806,16 +933,29 @@
     "    * feat: evaluated deep feature\n",
     "    '''\n",
     "    i, image_path, vgg16 = args\n",
-    "    image = io.imread(image_path)\n",
+    "    image = io.imread(image_path).astype('double') / 255\n",
+    "    img_torch = preprocess_image(image)\n",
     "    \n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> Think along the lines of evaluate_deep_extractor\n",
     "    '''\n",
     "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return [i,feat]"
+    "    with torch.no_grad():\n",
+    "        vgg_classifier = torch.nn.Sequential(*list(vgg16.classifier.children())[:-3])\n",
+    "        feat = vgg16.features(img_torch[None, ])\n",
+    "        feat = vgg_classifier(feat.flatten())\n",
+    "\n",
+    "    print(\"Processed {}\".format(i))\n",
+    "    return [i, feat.numpy()]\n",
+    "\n",
+    "\n",
+    "# i = 10\n",
+    "# image_path = \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\"\n",
+    "# vgg16 = torchvision.models.vgg16(pretrained=True).double()\n",
+    "# feature = get_image_feature([i, image_path, vgg16])\n",
+    "# print(feature)\n",
+    "# print(feature[1].shape)"
    ]
   },
   {
@@ -837,7 +977,7 @@
    },
    "outputs": [],
    "source": [
-    "def build_recognition_system(vgg16, num_workers=2):\n",
+    "def build_recognition_system(vgg16, num_workers=6):\n",
     "    '''\n",
     "    Creates a trained recognition system by generating training features from all training images.\n",
     "\n",
@@ -857,22 +997,40 @@
     "    2.> Keep track of the order in which input is given to multiprocessing\n",
     "    '''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    ordered_features = [None] * len(features)\n",
+    "    train_data = np.load(\"./data/train_data.npz\")\n",
+    "    list_of_args = []\n",
+    "    print(\"Starting to train on {} images\".format(len(train_data[\"files\"])))\n",
+    "    for i, image_path in enumerate(train_data[\"files\"]):\n",
+    "        list_of_args.append((i, \"./data/\" + image_path, vgg16))\n",
+    "\n",
+    "    # This froze for me, just do in order for now\n",
+    "    # with multiprocessing.Pool(num_workers) as p:\n",
+    "    #     unordered_features = [a for a in p.map(get_image_feature, list_of_args)]\n",
+    "\n",
+    "    ordered_features = np.array([\n",
+    "        # Only save the feature, not the i\n",
+    "        get_image_feature(args)[1]\n",
+    "        for args in list_of_args\n",
+    "    ])\n",
+    "    \n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> reorder the features to their correct place as input\n",
     "    '''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # ordered_features = [x[1] for x in sorted(unordered_features, key=lambda x: x[0])]\n",
+    "        \n",
+    "    np.savez('trained_system_deep.npz', features=ordered_features, labels=train_data[\"labels\"])\n",
     "    print(\"done\", ordered_features.shape)\n",
-    "    \n",
-    "    np.savez('trained_system_deep.npz', features=ordered_features, labels=labels)"
+    "\n",
+    "\n",
+    "# vgg16 = torchvision.models.vgg16(pretrained=True).double()\n",
+    "# build_recognition_system(vgg16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "357651ab",
    "metadata": {
     "deletable": false,
@@ -889,10 +1047,15 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "def helper_func(args):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    i, image_path, vgg16, trained_features, train_labels = args\n",
+    "    _, feature = get_image_feature((i, image_path, vgg16))\n",
+    "    # Create a (num_images, len(feature)) array\n",
+    "    feature_reshaped = np.ones(trained_features.shape) * feature\n",
+    "    # Find the smallest difference\n",
+    "    differences = np.sum((feature_reshaped - trained_features)**2, axis=1)\n",
+    "    index = np.argmin(differences)\n",
+    "    pred_label = train_labels[index]\n",
     "    return [i, pred_label]\n",
     "\n",
     "\n",
@@ -915,7 +1078,7 @@
     "    test_data = np.load(\"./data/test_data.npz\", allow_pickle=True)\n",
     "\n",
     "    # ----- TODO -----\n",
-    "    xtrained_system = np.load(\"trained_system_deep.npz\", allow_pickle=True)\n",
+    "    trained_system = np.load(\"trained_system_deep.npz\", allow_pickle=True)\n",
     "    image_names = test_data['files']\n",
     "    test_labels = test_data['labels']\n",
     "\n",
@@ -939,20 +1102,29 @@
     "    5.> np.argmin over distance can give the closest point\n",
     "    '''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
+    "    ordered_labels = np.array([\n",
+    "        helper_func((i, \"./data/\" + file_path, vgg16, trained_features, train_labels))[1]\n",
+    "        for i, file_path in enumerate(image_names)   \n",
+    "    ])\n",
     "    print(\"Predicted labels shape: \", ordered_labels.shape)\n",
     "    \n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> Compute the confusion matrix (8x8)\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    np.save(\"./trained_conf_matrix.npy\",conf_matrix)\n",
+    "    # 8 labels, actual goes on axis 0, predicted on axis 1\n",
+    "    conf_matrix = np.zeros((8, 8), dtype=int)\n",
+    "    for actual, predicted in zip(test_labels, ordered_labels):\n",
+    "        conf_matrix[actual, predicted] += 1\n",
+    "\n",
+    "    accuracy = np.trace(conf_matrix) / np.sum(conf_matrix)\n",
+    "\n",
+    "    np.save(\"./trained_conf_matrix.npy\", conf_matrix)\n",
     "    return conf_matrix, accuracy\n",
-    "    # pass"
+    "\n",
+    "\n",
+    "# vgg16 = torchvision.models.vgg16(pretrained=True).double()\n",
+    "# evaluate_recognition_system(vgg16)"
    ]
   },
   {
@@ -1112,7 +1284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1126,7 +1298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
