--- a/class/hw2/p2.ipynb
+++ b/class/hw2/p2.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "97b6eca9",
    "metadata": {
     "deletable": false,
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4550429e",
    "metadata": {
     "deletable": false,
@@ -200,9 +200,40 @@
     "    (1) We can use np.histogram with flattened wordmap\n",
     "    '''\n",
     "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return hist\n"
+    "    hist, bin_edges = np.histogram(\n",
+    "        wordmap,\n",
+    "        bins=list(range(dict_size + 1)),\n",
+    "        density=True,\n",
+    "    )\n",
+    "    return hist\n",
+    "\n",
+    "\n",
+    "# A = np.array([\n",
+    "#     [1, 2, 3, 4, 5],\n",
+    "#     [1, 1, 1, 2, 2],\n",
+    "# ])\n",
+    "# print(A)\n",
+    "# print(get_feature_from_wordmap(A, 5))\n",
+    "\n",
+    "# from skimage import io\n",
+    "# from matplotlib import pyplot\n",
+    "# dictionary = np.load('dictionary.npy')\n",
+    "# for thing, path_img in [\n",
+    "#         (\"aquarium\", \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\"),\n",
+    "#         (\"waterfall\", \"./data/waterfall/sun_bwzkjyclonamrgog.jpg\"),\n",
+    "#         (\"windmill\", \"./data/windmill/sun_bnsthmtlderxjywh.jpg\"),\n",
+    "#         (\"kitchen\", \"./data/kitchen/sun_aaslbwtcdcwjukuo.jpg\"),\n",
+    "#         (\"laundromat\", \"./data/laundromat/sun_ahdhftyojzpaadhb.jpg\"),\n",
+    "#     ]:\n",
+    "#     image = io.imread(path_img).astype('float') / 255\n",
+    "#     wordmap = get_visual_words(image, dictionary)\n",
+    "#     pyplot.bar(\n",
+    "#         list(range(200)),\n",
+    "#         get_feature_from_wordmap(wordmap, dict_size=200),\n",
+    "#         width=1,\n",
+    "#     )\n",
+    "#     pyplot.title(thing)\n",
+    "#     pyplot.show()"
    ]
   },
   {
@@ -295,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "405c743a",
    "metadata": {
     "deletable": false,
@@ -322,7 +353,7 @@
     "    * dict_size: dictionary size K\n",
     "\n",
     "    [output]\n",
-    "    * hist_all: numpy.ndarray of shape (K*(4^layer_num-1)/3)\n",
+    "    * hist_all: numpy.ndarray of shape (K*((4^layer_num)-1)/3)\n",
     "    '''\n",
     "    '''\n",
     "    HINTS:\n",
@@ -333,25 +364,114 @@
     "    # ----- TODO -----\n",
     "    h, w = wordmap.shape\n",
     "    L = layer_num - 1\n",
-    "    patch_width = math.floor(w / (2**L))\n",
-    "    patch_height = math.floor(h / (2**L))\n",
+    "    num_patches = 2**L\n",
+    "    patch_width = math.floor(w / num_patches)\n",
+    "    patch_height = math.floor(h / num_patches)\n",
     "    \n",
     "    '''\n",
     "    HINTS:\n",
-    "    1.> create an array of size (dict_size, (4**(L + 1) -1)/3) )\n",
+    "    1.> create an array of size (dict_size, (4**(L+1) - 1) / 3)\n",
     "    2.> pre-compute the starts, ends and weights for the SPM layers L \n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    hist_all = np.zeros((dict_size, int((4**(L+1) - 1) / 3)))\n",
+    "\n",
+    "    # Choose the slice values\n",
+    "    width_slices = [[i * patch_width, (i + 1) * patch_width]\n",
+    "                    for i in range(num_patches)]\n",
+    "    height_slices = [[i * patch_height, (i + 1) * patch_height]\n",
+    "                     for i in range(num_patches)]\n",
+    "    # Special case the last values to make sure we don't miss anything\n",
+    "    width_slices[-1][1] = w\n",
+    "    height_slices[-1][1] = h\n",
+    "\n",
+    "    # The weights will end up as [0.5, 0.25, 0.25] for L=2\n",
+    "    # [0.5, 0.25, 0.125, 0.125] for L=3\n",
+    "    weights = [2**-L]                                                                                                                                                                                 \n",
+    "    for l in range(1, L+1): \n",
+    "        weights.append(2**(l - L - 1))\n",
+    "    weights = list(reversed(weights))\n",
+    "\n",
+    "    # These are the weights that make sure the whole group adds to 1\n",
+    "    # E.g. all 16 images in layer 0 (for L=2) should add to 1\n",
+    "    # So for L=2 this should be [16, 4, 1].\n",
+    "    # For L=3 it should be [64, 16, 4, 1]\n",
+    "    norm_weights = [2**(2*l) for l in range(L, -1, -1)]\n",
+    "    \n",
+    "    # Helpful variables for the automatic insertion. If there are four layers,\n",
+    "    # and L=3, then this should be [2^3, 2^2, 2^1, 2^0] = [8, 4, 2, 1]\n",
+    "    strides = [2**l for l in range(L, -1, -1)]\n",
+    "    # Calculate the offsets for where zero is in the PREVIOUS built-up array.\n",
+    "    # If there are four layers and L=3, then this should be the cumulative\n",
+    "    # sum of [0, 2**(2*3), 2**(2*2)] = [0, 64, 80]\n",
+    "    zero_points = np.cumsum([0] + [2**(2*l) for l in range(L, 1, -1)])\n",
+    "\n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> Loop over the layers from L to 0\n",
     "    2.> Handle the base case (Layer L) separately and then build over that\n",
     "    3.> Normalize each histogram separately and also normalize the final histogram\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return hist_all\n"
+    "    # Do the smallest patches first\n",
+    "    insert_idx = 0\n",
+    "    for h1, h2 in height_slices:\n",
+    "        for w1, w2 in width_slices:\n",
+    "            hist = get_feature_from_wordmap(wordmap[h1:h2, w1:w2], dict_size)\n",
+    "            hist /= np.sum(hist)\n",
+    "            hist_all[:, insert_idx] = norm_weights[0] * weights[0] * hist\n",
+    "            insert_idx += 1\n",
+    "\n",
+    "    # Build up the remaining layers. Start by counting backwards from L-1. In the\n",
+    "    # four layer case (L=3) that would result in us working through [l=2, l=1, l=0]\n",
+    "    for l, weight, norm_weight, old_stride, new_stride, prev_zero in zip(\n",
+    "                range(L-1, -1, -1),\n",
+    "                weights[1:],\n",
+    "                norm_weights[1:],\n",
+    "                strides[:-1],\n",
+    "                strides[1:],\n",
+    "                zero_points,\n",
+    "            ):\n",
+    "        # E.g. in the case of l=2 we want to iterate over 16 boxes\n",
+    "        for new_idx in range(0, 2**(2*l)):\n",
+    "            # Get the base idx corresponding to this section\n",
+    "            base_idx = prev_zero + ((2 * new_idx) + (new_idx // new_stride) * old_stride)\n",
+    "            indices = [base_idx, base_idx + 1, base_idx + old_stride, base_idx + old_stride + 1]\n",
+    "            combined = np.sum(hist_all[:, indices], axis=1)\n",
+    "            combined /= np.sum(combined)\n",
+    "            hist_all[:, insert_idx] = norm_weight * weight * combined\n",
+    "            insert_idx += 1\n",
+    "            \n",
+    "    # It's unclear to me which order of SPM hists should go where. If\n",
+    "    # hist_all starts as (200, 21), where we have [L1 | L2 | L3 ...],\n",
+    "    # then hist_all.T.flatten() will get [L1 (row 1x200), L2 (row 1x200),\n",
+    "    # L3 (row 1x200) ...]. I think that makes more sense than hist_all.flatten()\n",
+    "    # which interleaves all the patches. Alternatively, we could have built\n",
+    "    # hist_all as transposed from the start, but they GAVE us that shape...\n",
+    "    hist_flat = hist_all.T.flatten()\n",
+    "    hist_flat /= np.sum(hist_flat)\n",
+    "\n",
+    "    return hist_flat\n",
+    "\n",
+    "\n",
+    "# from skimage import io\n",
+    "# from matplotlib import pyplot\n",
+    "# dictionary = np.load('dictionary.npy')\n",
+    "# layer_num = 3\n",
+    "# for thing, path_img in [\n",
+    "#         (\"aquarium\", \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\"),\n",
+    "#         (\"waterfall\", \"./data/waterfall/sun_bwzkjyclonamrgog.jpg\"),\n",
+    "#         (\"windmill\", \"./data/windmill/sun_bnsthmtlderxjywh.jpg\"),\n",
+    "#         (\"kitchen\", \"./data/kitchen/sun_aaslbwtcdcwjukuo.jpg\"),\n",
+    "#         (\"laundromat\", \"./data/laundromat/sun_ahdhftyojzpaadhb.jpg\"),\n",
+    "#     ]:\n",
+    "#     image = io.imread(path_img).astype('float') / 255\n",
+    "#     wordmap = get_visual_words(image, dictionary)\n",
+    "#     pyplot.bar(\n",
+    "#         list(range(200 * int((4**layer_num - 1) / 3))),\n",
+    "#         get_feature_from_wordmap_SPM(wordmap, layer_num=layer_num, dict_size=200),\n",
+    "#         width=1,\n",
+    "#     )\n",
+    "#     pyplot.title(thing)\n",
+    "#     pyplot.show()"
    ]
   },
   {
@@ -389,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "33b4acca",
    "metadata": {
     "deletable": false,
@@ -423,9 +543,24 @@
     "        similarity between element A and set B could be represented as [[0.1,0.3,0.5],[0.1,0.1,0.1]]   \n",
     "    '''\n",
     "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return sim"
+    "    \n",
+    "    # According to the docstring, we're supposed to return an unsummed matrix\n",
+    "    # However, according to the explanatory text, we're supposed to return\n",
+    "    # a summed matrix (a.k.a. vector). Let's do that.\n",
+    "    similarity = np.minimum(word_hist, histograms)\n",
+    "    return np.sum(similarity, axis=1)\n",
+    "\n",
+    "\n",
+    "# a = np.array([1, 2, 3, 4, 5, 6])\n",
+    "# b = np.array([\n",
+    "#     [6, 5, 4, 3, 2, 1],\n",
+    "#     [1, 1, 1, 1, 1, 1],\n",
+    "#     [6, 6, 6, 6, 6, 6],\n",
+    "#     [6, 6, 0, 0, 6, 6],\n",
+    "# ])\n",
+    "# print(a)\n",
+    "# print(b)\n",
+    "# print(distance_to_set(a, b))"
    ]
   },
   {
@@ -491,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0e9faf82",
    "metadata": {
     "deletable": false,
@@ -508,6 +643,9 @@
    },
    "outputs": [],
    "source": [
+    "from skimage import io\n",
+    "PREFIX = \"./data/\"\n",
+    "\n",
     "def get_image_feature(file_path, dictionary, layer_num, K):\n",
     "    '''\n",
     "    Extracts the spatial pyramid matching feature.\n",
@@ -522,14 +660,46 @@
     "    * feature: numpy.ndarray of shape (K*(4^layer_num-1)/3)\n",
     "    '''\n",
     "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return [file_path, feature]\n"
+    "\n",
+    "    # I'm not sure what's supposed to happen here. The files are coming in\n",
+    "    # without this necessary path prefix.\n",
+    "    if not file_path.startswith(PREFIX):\n",
+    "        file_path = PREFIX + file_path\n",
+    "\n",
+    "    image = io.imread(file_path).astype('float') / 255\n",
+    "    wordmap = get_visual_words(image, dictionary)\n",
+    "    spm_feature = get_feature_from_wordmap_SPM(wordmap, layer_num, dict_size=K)\n",
+    "    return [file_path, spm_feature]\n",
+    "\n",
+    "\n",
+    "# from matplotlib import pyplot\n",
+    "# from util import save_wordmap\n",
+    "# dictionary = np.load('dictionary.npy')\n",
+    "# for thing, path_img in [\n",
+    "#         (\"aquarium\", \"./data/aquarium/sun_aztvjgubyrgvirup.jpg\"),\n",
+    "#         (\"waterfall\", \"./data/waterfall/sun_bwzkjyclonamrgog.jpg\"),\n",
+    "#         (\"windmill\", \"./data/windmill/sun_bnsthmtlderxjywh.jpg\"),\n",
+    "#         (\"kitchen\", \"./data/kitchen/sun_aaslbwtcdcwjukuo.jpg\"),\n",
+    "#         (\"laundromat\", \"./data/laundromat/sun_ahdhftyojzpaadhb.jpg\"),\n",
+    "#     ]:\n",
+    "\n",
+    "#     image = io.imread(path_img).astype('float') / 255\n",
+    "#     wordmap = get_visual_words(image, dictionary)\n",
+    "#     save_wordmap(wordmap, \"hist_wordmap_{}_{}.png\".format(thing, path_img.split(\"/\")[-1].replace(\".jpg\", \"\")))\n",
+    "    \n",
+    "#     _, hist = get_image_feature(path_img, dictionary, layer_num=3, K=200)\n",
+    "#     pyplot.bar(\n",
+    "#         list(range(200 * int((4**3 - 1) / 3))),\n",
+    "#         hist,\n",
+    "#         width=1,\n",
+    "#     )\n",
+    "#     pyplot.title(thing)\n",
+    "#     pyplot.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c787bb28",
    "metadata": {
     "deletable": false,
@@ -562,13 +732,30 @@
     "\n",
     "    train_data = np.load(\"./data/train_data.npz\")\n",
     "    dictionary = np.load(\"dictionary.npy\")\n",
+    "\n",
+    "    num_images = train_data[\"labels\"].shape[0]\n",
+    "    num_words = dictionary.shape[0]\n",
+    "    SPM_layer_num = 3\n",
+    "    feature_len = num_words * int((4**SPM_layer_num - 1) / 3)\n",
+    "\n",
     "    # ----- TODO -----\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    np.savez('trained_system.npz', features=ordered_features,\n",
-    "                                    labels=labels,\n",
-    "                                    dictionary=dictionary,\n",
-    "                                    SPM_layer_num=SPM_layer_num)"
+    "    ordered_features = np.zeros((num_images, feature_len))\n",
+    "    for i, file_path in enumerate(train_data[\"files\"]):\n",
+    "        _, feature = get_image_feature(\"./data/\" + file_path,\n",
+    "                                       dictionary,\n",
+    "                                       SPM_layer_num,\n",
+    "                                       K=num_words)\n",
+    "        print(f\"Processed {i} / {num_images}\")\n",
+    "        ordered_features[i, :] = feature\n",
+    "    \n",
+    "    np.savez('trained_system.npz',\n",
+    "             features=ordered_features,\n",
+    "             labels=train_data[\"labels\"],\n",
+    "             dictionary=dictionary,\n",
+    "             SPM_layer_num=SPM_layer_num)\n",
+    "\n",
+    "\n",
+    "# build_recognition_system()"
    ]
   },
   {
@@ -689,7 +876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
