--- a/class/hw2/p3.ipynb
+++ b/class/hw2/p3.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e00ddf3",
    "metadata": {
     "deletable": false,
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "826e61ed",
    "metadata": {
     "deletable": false,
@@ -159,14 +159,16 @@
    },
    "outputs": [],
    "source": [
+    "def helper_func(args):\n",
+    "    i, file_path, dictionary, layer_num, K, trained_features, train_labels = args\n",
+    "    _, feature = get_image_feature(file_path, dictionary, layer_num, K)\n",
+    "    nearest_image_idx = np.argmax(distance_to_set(feature, trained_features))\n",
+    "    pred_label = train_labels[nearest_image_idx]\n",
+    "    print(\"Processed index {}\".format(i))\n",
+    "    return [i, file_path, pred_label, nearest_image_idx]\n",
     "\n",
-    "def helper_func(file_path, dictionary, layer_num, K, trained_features, train_labels):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return [file_path, pred_label, nearest_image_idx]\n",
     "\n",
-    "\n",
-    "def evaluate_recognition_system(num_workers=2):\n",
+    "def evaluate_recognition_system(num_workers=6, trained_sys=\"trained_system.npz\"):\n",
     "    '''\n",
     "    Evaluates the recognition system for all test images and returns the confusion matrix.\n",
     "\n",
@@ -185,18 +187,16 @@
     "    '''\n",
     "    \n",
     "    test_data = np.load(\"./data/test_data.npz\")\n",
-    "    trained_system = np.load(\"trained_system.npz\")\n",
-    "    \n",
+    "    trained_system = np.load(trained_sys)\n",
+    "\n",
     "    image_names = test_data['files']\n",
     "    test_labels = test_data['labels']\n",
-    "\n",
+    "    \n",
     "    trained_features = trained_system['features']\n",
     "    train_labels = trained_system['labels']\n",
     "    dictionary = trained_system['dictionary']\n",
-    "    SPM_layer_num = trained_system['SPM_layer_num']\n",
-    "    SPM_layer_num = int(SPM_layer_num)\n",
+    "    SPM_layer_num = int(trained_system['SPM_layer_num'])\n",
     "    K = dictionary.shape[0]\n",
-    "\n",
     "    print(\"Trained features shape: \", trained_features.shape)\n",
     "    \n",
     "    # ----- TODO -----\n",
@@ -208,19 +208,24 @@
     "        trained_features,...) as input and return (file_path, label, nearest neighbor index)\n",
     "    4.> We can use python dictionary and file_path to have the output in correct order\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    list_of_args = [\n",
+    "        (i, file_path, dictionary, SPM_layer_num, K, trained_features, train_labels)\n",
+    "        for i, file_path in enumerate(image_names)\n",
+    "    ]\n",
+    "    print(\"Processing {} test images\".format(len(image_names)))\n",
+    "    print(\"=\" * 80)\n",
+    "    # This was freezing for me, running in order\n",
+    "    # with multiprocessing.Pool(num_workers) as p:\n",
+    "    #     unsorted_output = [a for a in p.map(helper_func, list_of_args)]\n",
+    "    # ordered_output = sorted(unsorted_output, key=lambda x: x[0])\n",
+    "    ordered_output = [helper_func(args) for args in list_of_args]\n",
+    "\n",
     "    '''\n",
     "    HINTS:\n",
     "    1.> Can use the file_name (path) to place the labels back in original order of input to multiprocessing\n",
     "    '''\n",
-    "    ordered_labels = [None] * len(pred_labels)\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "    ordered_labels = [group[2] for group in ordered_output]\n",
     "    ordered_labels = np.array(ordered_labels, dtype=int)\n",
-    "    \n",
     "    print(\"Predicted labels shape: \", ordered_labels.shape)\n",
     "    \n",
     "    '''\n",
@@ -228,10 +233,18 @@
     "    1.> Compute the confusion matrix (8x8)\n",
     "    2.> Remember to save and upload the confusion matrix\n",
     "    '''\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # 8 labels, actual goes on axis 0, predicted on axis 1\n",
+    "    conf_matrix = np.zeros((8, 8), dtype=int)\n",
+    "    for actual, predicted in zip(test_labels, ordered_labels):\n",
+    "        conf_matrix[actual, predicted] += 1\n",
+    "\n",
+    "    accuracy = np.trace(conf_matrix) / np.sum(conf_matrix)\n",
+    "    \n",
     "    np.save(\"./conf_matrix.npy\",conf_matrix)\n",
-    "    return conf_matrix, accuracy"
+    "    return conf_matrix, accuracy\n",
+    "\n",
+    "\n",
+    "# evaluate_recognition_system()"
    ]
   },
   {
@@ -413,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
