Making progress on p2? Unsuccessful

--- a/class/hw3/q2.ipynb
+++ b/class/hw3/q2.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1253,34 +1253,42 @@
     "\n",
     "    for itr in range(max_iters):\n",
     "        total_loss = 0\n",
-    "        avg_acc = 0\n",
+    "        avg_acc = 0  # How are you supposed to take a running average?\n",
     "        for xb, yb in batches:\n",
     "\n",
     "            # forward\n",
     "            # YOUR CODE HERE\n",
     "\n",
-    "            # ipdb> xb.shape\n",
-    "            # (5, 2)\n",
-    "            # ipdb> yb.shape\n",
-    "            # (5, 4)\n",
-    "            # ipdb> params.keys()\n",
-    "            # dict_keys(['Wlayer1', 'blayer1', 'Woutput', 'boutput'])\n",
-    "\n",
-    "            import ipdb; ipdb.set_trace()\n",
-    "            raise NotImplementedError()\n",
+    "            y1 = forward(X=xb, params=params, name='layer1', activation=sigmoid)\n",
+    "            probs = forward(X=y1, params=params, name='output', activation=softmax)\n",
     "            \n",
     "            # loss\n",
     "            # be sure to add loss and accuracy to epoch totals\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
-    "            \n",
+    "            loss, accuracy = compute_loss_and_acc(y=yb, probs=probs)\n",
+    "            total_loss += loss\n",
+    "            avg_acc += accuracy\n",
+    "\n",
     "            # backward\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "\n",
+    "            # Is this true? Is loss the same as delta the same as dJ/dy?\n",
+    "            g1 = backwards(delta=loss, params=params, name='output',\n",
+    "                           activation_deriv=linear_deriv)\n",
+    "            g2 = backwards(delta=g1, params=params, name='layer1',\n",
+    "                           activation_deriv=sigmoid_deriv)\n",
     "\n",
     "            # apply gradient\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "\n",
+    "            # I don't think that dJ/dx means anything, right? Since we\n",
+    "            # can't actually change anything about x? That's the input\n",
+    "            for name in ['layer1', 'output']:\n",
+    "                params[f'W{name}'] += params[f'grad_W{name}']\n",
+    "                params[f'b{name}'] += params[f'grad_b{name}']\n",
+    "\n",
+    "        # Is this how we're intended to do it?\n",
+    "        avg_acc /= len(batches)\n",
     "            \n",
     "        if itr % 100 == 0:\n",
     "            print(\"itr: {:02d} \\t loss: {:.2f} \\t acc : {:.2f}\".format(\n",
@@ -1290,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1308,32 +1316,34 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-dc1c16e312fb>:14: RuntimeWarning: overflow encountered in exp\n",
+      "  res = 1 / (1 + np.exp(-X))\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> \u001b[0;32m<ipython-input-63-a22d73360d74>\u001b[0m(31)\u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     30 \u001b[0;31m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 31 \u001b[0;31m            \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     32 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> xb.shape\n",
-      "(5, 2)\n",
-      "ipdb> yb.shape\n",
-      "(5, 4)\n",
-      "ipdb> yb\n",
-      "array([[0., 1., 0., 0.],\n",
-      "       [0., 0., 1., 0.],\n",
-      "       [1., 0., 0., 0.],\n",
-      "       [0., 0., 1., 0.],\n",
-      "       [0., 0., 1., 0.]])\n",
-      "ipdb> xb\n",
-      "array([[ 3.89702344, 10.33798281],\n",
-      "       [ 3.36034305, 29.50644453],\n",
-      "       [ 3.60606984, 40.04677849],\n",
-      "       [ 2.98737532, 29.71693643],\n",
-      "       [ 3.97913637, 31.4361424 ]])\n",
-      "ipdb> params.keys()\n",
-      "dict_keys(['Wlayer1', 'blayer1', 'Woutput', 'boutput'])\n"
+      "itr: 00 \t loss: 64.03 \t acc : 0.30\n",
+      "itr: 100 \t loss: 66.65 \t acc : 0.25\n",
+      "itr: 200 \t loss: 65.19 \t acc : 0.25\n",
+      "itr: 300 \t loss: 65.19 \t acc : 0.25\n",
+      "itr: 400 \t loss: 65.19 \t acc : 0.25\n",
+      "itr: 500 \t loss: 65.19 \t acc : 0.25\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-663f4ec7d417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# with default settings, you should get loss < 35 and accuracy > 75%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mtotal_loss\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m35\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mavg_acc\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.75\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -1411,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1446,14 +1456,34 @@
     "        #   run the forward function\n",
     "        #   get the loss\n",
     "        #   compute derivative with central diffs\n",
-    "    \n",
+    "\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n"
+    "        name = k[1:]\n",
+    "        losses = []\n",
+    "        for sign in [-1, 1]:\n",
+    "\n",
+    "            X, pre_act, post_act = params[f'cache_{name}']\n",
+    "            params[k] += sign * eps\n",
+    "\n",
+    "            if name == \"layer1\":\n",
+    "                y1 = forward(X, params, name, sigmoid)\n",
+    "                probs = forward(y1, params, \"output\", softmax)\n",
+    "            else:\n",
+    "                probs = forward(X, params, name, softmax)\n",
+    "\n",
+    "            # What are we supposed to use as labels?\n",
+    "            import ipdb; ipdb.set_trace()\n",
+    "            loss, accuracy = compute_loss_and_acc(y=yb, probs=probs)\n",
+    "\n",
+    "            # Clean up, bring things back to the original\n",
+    "            params[k] -= sign * eps\n",
+    "\n",
+    "        params[f'grad_{k}'] = np.sum(losses) / (2 * eps)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1469,7 +1499,45 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-dc1c16e312fb>:14: RuntimeWarning: overflow encountered in exp\n",
+      "  res = 1 / (1 + np.exp(-X))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m(36)\u001b[0;36mcenteral_differences_gradient\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     35 \u001b[0;31m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 36 \u001b[0;31m            \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     37 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> params.keys()\n",
+      "dict_keys(['Wlayer1', 'blayer1', 'Woutput', 'boutput', 'cache_layer1', 'cache_output', 'grad_Woutput', 'grad_boutput', 'grad_Wlayer1', 'grad_blayer1'])\n",
+      "ipdb> q\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-03e098073bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Compute the estimated gradient using central difference\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mcenteral_differences_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mtotal_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m in \u001b[0;36mcenteral_differences_gradient\u001b[0;34m(params, eps)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0;31m# Clean up, bring things back to the original\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m in \u001b[0;36mcenteral_differences_gradient\u001b[0;34m(params, eps)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0;31m# Clean up, bring things back to the original\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/bdb.py\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/bdb.py\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m    111\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Compute the analytical gradients\n",
     "h1 = forward(x,params,'layer1')\n",
@@ -1496,6 +1564,13 @@
     "# should be less than 1e-4\n",
     "assert 0. < total_error < 1e-4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
